--- a/public/spectator/spectator.css
+++ b/public/spectator/spectator.css
@@ -1,41 +1,47 @@
 @font-face {
-	font-family: 'Avenir';
-	/* src fallbacks ommitted for brevity */
-	font-weight: normal;
-	font-style: normal;
+  font-family: "Avenir";
+  /* src fallbacks ommitted for brevity */
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-	background-color: #2b2b2b;
-	color: #e6e6e6e6;
-	font-size: 22px;
-	font-family: 'Avenir';
-	margin: 0px;
-	padding: 0px;
+  background-color: rgb(42, 46, 51);
+  color: #e6e6e6e6;
+  font-size: 22px;
+  font-family: "Avenir";
+  margin: 0px;
+  padding: 0px;
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-wrap: normal;
+  white-space: nowrap;
 }
 
 h1 {
-	margin-bottom: 30px;
-	padding-bottom: 20px;
-	color: #e6e6e6;
-	font-size: 52px;
-}
-
-h3 {
-	margin-top: 5px;
-	margin-bottom: 10px;
-	padding-bottom: inherit;
+  margin-bottom: 30px;
+  padding-bottom: 20px;
+  color: #8a8a8a;
+  font-size: 52px;
+  font-variant: small-caps;
 }
 
 #container {
-	margin: auto;
-	width: 1300px;
-	padding: 20px;
+  margin: auto;
+  width: 1300px;
+  padding: 20px;
+  overflow-x: hidden;
+  overflow-wrap: normal;
+  white-space: nowrap;
 }
 
+#program,
 #last,
 #current,
 #next {
-	color: #e6e6e6;
-	font-size: 72px;
+  padding-left: 5%;
+  padding-top: 5px;
+  color: #e6e6e6;
+  font-size: 42px;
+  font-variant: normal;
 }
