--- a/public/spectator/spectator.css
+++ b/public/spectator/spectator.css
@@ -35,13 +35,34 @@ h1 {
   white-space: nowrap;
 }
 
-#program,
+#connMsg {
+  color: #e9e212;
+}
+
+#program {
+  padding-left: 5px;
+  padding-top: 5px;
+  color: #e6e6e6;
+  font-size: 32px;
+  font-variant: small-caps;
+  align-items: center;
+}
+
 #last,
 #current,
 #next {
-  padding-left: 5%;
+  padding-left: 5px;
   padding-top: 5px;
   color: #e6e6e6;
   font-size: 42px;
   font-variant: normal;
+}
+
+.multiplier {
+  font-size: 38px;
+  color: #9d9d9d;
+}
+
+.disconnect {
+  color: #e91212 !important;
 }
